fix whitespace collapsing in editables

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -20,6 +20,7 @@ body {
     width: 100%;
     background-color: white;
     cursor: text;
+    white-space: pre-wrap;
 }
 
 .block-children {
